// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`shared native enums [dictionary] > [decorators] > shared native enum 1`] = `
[
  "import { Collection, type Opt, PrimaryKeyProp } from '@mikro-orm/core';
import { Entity, Enum, OneToMany, PrimaryKey, Property } from '@mikro-orm/decorators/legacy';
import { TDbRowStatus, TDbRowStatus } from './TDbRowStatus';
import { UserRoles } from './UserRoles';

@Entity()
export class Domains {

  [PrimaryKeyProp]?: 'key';

  @PrimaryKey({ length: 64 })
  key!: string;

  @Property({ length: 256 })
  name!: string;

  @Property({ type: 'datetime', defaultRaw: \`CURRENT_TIMESTAMP\` })
  createdAt!: Date & Opt;

  @Property({ type: 'datetime', defaultRaw: \`CURRENT_TIMESTAMP\` })
  updatedAt!: Date & Opt;

  @Enum({ items: () => DbRowStatus, nativeEnumName: 'db_row_status' })
  rowStatus: TDbRowStatus & Opt = DbRowStatus.ENABLED;

  @OneToMany({ entity: () => UserRoles, mappedBy: 'domain' })
  userRolesCollection = new Collection<UserRoles>(this);

}
",
  "import { Collection, type Opt, PrimaryKeyProp } from '@mikro-orm/core';
import { Entity, Enum, OneToMany, PrimaryKey, Property } from '@mikro-orm/decorators/legacy';
import { TDbRowStatus, TDbRowStatus } from './TDbRowStatus';
import { UserRoles } from './UserRoles';

@Entity()
export class Roles {

  [PrimaryKeyProp]?: 'key';

  @PrimaryKey({ length: 64 })
  key!: string;

  @Property({ length: 256 })
  name!: string;

  @Property({ type: 'datetime', defaultRaw: \`CURRENT_TIMESTAMP\` })
  createdAt!: Date & Opt;

  @Property({ type: 'datetime', defaultRaw: \`CURRENT_TIMESTAMP\` })
  updatedAt!: Date & Opt;

  @Enum({ items: () => DbRowStatus, nativeEnumName: 'db_row_status' })
  rowStatus: TDbRowStatus & Opt = DbRowStatus.ENABLED;

  @OneToMany({ entity: () => UserRoles, mappedBy: 'role' })
  userRolesCollection = new Collection<UserRoles>(this);

}
",
  "import { type Opt, PrimaryKeyProp, type Ref } from '@mikro-orm/core';
import { Entity, Enum, ManyToOne, Property } from '@mikro-orm/decorators/legacy';
import { Domains } from './Domains';
import { Roles } from './Roles';
import { TDbRowStatus, TDbRowStatus } from './TDbRowStatus';
import { Users } from './Users';

@Entity()
export class UserRoles {

  [PrimaryKeyProp]?: ['domain', 'user'];

  @ManyToOne({ entity: () => Domains, ref: true, updateRule: 'no action', primary: true })
  domain!: Ref<Domains>;

  @Property({ length: 64, persist: false })
  domainKey!: string;

  @ManyToOne({ entity: () => Users, ref: true, updateRule: 'no action', primary: true })
  user!: Ref<Users>;

  @Property({ type: 'uuid', persist: false })
  userId!: string;

  @ManyToOne({ entity: () => Roles, ref: true, updateRule: 'no action', deleteRule: 'cascade' })
  role!: Ref<Roles>;

  @Property({ length: 64, persist: false })
  roleKey!: string;

  @Property({ type: 'datetime', defaultRaw: \`CURRENT_TIMESTAMP\` })
  createdAt!: Date & Opt;

  @Property({ type: 'datetime', defaultRaw: \`CURRENT_TIMESTAMP\` })
  updatedAt!: Date & Opt;

  @Enum({ items: () => DbRowStatus, nativeEnumName: 'db_row_status' })
  rowStatus: TDbRowStatus & Opt = DbRowStatus.ENABLED;

}
",
  "import { Collection, type Opt } from '@mikro-orm/core';
import { Entity, Enum, OneToMany, PrimaryKey, Property } from '@mikro-orm/decorators/legacy';
import { TDbRowStatus, TDbRowStatus } from './TDbRowStatus';
import { UserRoles } from './UserRoles';

@Entity()
export class Users {

  @PrimaryKey({ type: 'uuid' })
  id!: string;

  @Property({ length: 256 })
  email!: string;

  @Property({ type: 'datetime', defaultRaw: \`CURRENT_TIMESTAMP\` })
  createdAt!: Date & Opt;

  @Property({ type: 'datetime', defaultRaw: \`CURRENT_TIMESTAMP\` })
  updatedAt!: Date & Opt;

  @Enum({ items: () => DbRowStatus, nativeEnumName: 'db_row_status' })
  rowStatus: TDbRowStatus & Opt = DbRowStatus.ENABLED;

  @OneToMany({ entity: () => UserRoles, mappedBy: 'user' })
  userRolesCollection = new Collection<UserRoles>(this);

}
",
  "export const DbRowStatus = {
  ENABLED: 'enabled',
  DISABLED: 'disabled',
  ARCHIVED: 'archived',
  DELETED: 'deleted',
} as const;

export type TDbRowStatus = (typeof DbRowStatus)[keyof typeof DbRowStatus];
",
]
`;

exports[`shared native enums [dictionary] > [defineEntity+types] > shared native enum 1`] = `
[
  "import { InferEntity, defineEntity, p } from '@mikro-orm/core';
import { TDbRowStatus } from './TDbRowStatus';
import { UserRoles } from './UserRoles';

export const Domains = defineEntity({
  name: 'Domains',
  properties: {
    key: p.string().primary().length(64),
    name: p.string().length(256),
    createdAt: p.datetime().defaultRaw(\`CURRENT_TIMESTAMP\`),
    updatedAt: p.datetime().defaultRaw(\`CURRENT_TIMESTAMP\`),
    rowStatus: p.enum(() => DbRowStatus).nativeEnumName('db_row_status'),
    userRolesCollection: () => p.oneToMany(UserRoles).mappedBy('domain'),
  },
});

export interface IDomains extends InferEntity<typeof Domains> {}
",
  "import { InferEntity, defineEntity, p } from '@mikro-orm/core';
import { TDbRowStatus } from './TDbRowStatus';
import { UserRoles } from './UserRoles';

export const Roles = defineEntity({
  name: 'Roles',
  properties: {
    key: p.string().primary().length(64),
    name: p.string().length(256),
    createdAt: p.datetime().defaultRaw(\`CURRENT_TIMESTAMP\`),
    updatedAt: p.datetime().defaultRaw(\`CURRENT_TIMESTAMP\`),
    rowStatus: p.enum(() => DbRowStatus).nativeEnumName('db_row_status'),
    userRolesCollection: () => p.oneToMany(UserRoles).mappedBy('role'),
  },
});

export interface IRoles extends InferEntity<typeof Roles> {}
",
  "import { InferEntity, defineEntity, p } from '@mikro-orm/core';
import { Domains } from './Domains';
import { Roles } from './Roles';
import { TDbRowStatus } from './TDbRowStatus';
import { Users } from './Users';

export const UserRoles = defineEntity({
  name: 'UserRoles',
  primaryKeys: ['domain', 'user'],
  properties: {
    domain: () => p.manyToOne(Domains).primary().ref().updateRule('no action'),
    domainKey: p.string().length(64).persist(false),
    user: () => p.manyToOne(Users).primary().ref().updateRule('no action'),
    userId: p.uuid().persist(false),
    role: () => p.manyToOne(Roles).ref().updateRule('no action').deleteRule('cascade'),
    roleKey: p.string().length(64).persist(false),
    createdAt: p.datetime().defaultRaw(\`CURRENT_TIMESTAMP\`),
    updatedAt: p.datetime().defaultRaw(\`CURRENT_TIMESTAMP\`),
    rowStatus: p.enum(() => DbRowStatus).nativeEnumName('db_row_status'),
  },
});

export interface IUserRoles extends InferEntity<typeof UserRoles> {}
",
  "import { InferEntity, defineEntity, p } from '@mikro-orm/core';
import { TDbRowStatus } from './TDbRowStatus';
import { UserRoles } from './UserRoles';

export const Users = defineEntity({
  name: 'Users',
  properties: {
    id: p.uuid().primary(),
    email: p.string().length(256),
    createdAt: p.datetime().defaultRaw(\`CURRENT_TIMESTAMP\`),
    updatedAt: p.datetime().defaultRaw(\`CURRENT_TIMESTAMP\`),
    rowStatus: p.enum(() => DbRowStatus).nativeEnumName('db_row_status'),
    userRolesCollection: () => p.oneToMany(UserRoles).mappedBy('user'),
  },
});

export interface IUsers extends InferEntity<typeof Users> {}
",
  "export const DbRowStatus = {
  ENABLED: 'enabled',
  DISABLED: 'disabled',
  ARCHIVED: 'archived',
  DELETED: 'deleted',
} as const;

export type TDbRowStatus = (typeof DbRowStatus)[keyof typeof DbRowStatus];
",
]
`;

exports[`shared native enums [dictionary] > [defineEntity] > shared native enum 1`] = `
[
  "import { Collection, type Opt, PrimaryKeyProp, defineEntity, p } from '@mikro-orm/core';
import { TDbRowStatus, TDbRowStatus } from './TDbRowStatus';
import { UserRoles } from './UserRoles';

export class Domains {
  [PrimaryKeyProp]?: 'key';
  key!: string;
  name!: string;
  createdAt!: Date & Opt;
  updatedAt!: Date & Opt;
  rowStatus: TDbRowStatus & Opt = DbRowStatus.ENABLED;
  userRolesCollection = new Collection<UserRoles>(this);
}

export const DomainsSchema = defineEntity({
  class: Domains,
  properties: {
    key: p.string().primary().length(64),
    name: p.string().length(256),
    createdAt: p.datetime().defaultRaw(\`CURRENT_TIMESTAMP\`),
    updatedAt: p.datetime().defaultRaw(\`CURRENT_TIMESTAMP\`),
    rowStatus: p.enum(() => DbRowStatus).nativeEnumName('db_row_status'),
    userRolesCollection: () => p.oneToMany(UserRoles).mappedBy('domain'),
  },
});
",
  "import { Collection, type Opt, PrimaryKeyProp, defineEntity, p } from '@mikro-orm/core';
import { TDbRowStatus, TDbRowStatus } from './TDbRowStatus';
import { UserRoles } from './UserRoles';

export class Roles {
  [PrimaryKeyProp]?: 'key';
  key!: string;
  name!: string;
  createdAt!: Date & Opt;
  updatedAt!: Date & Opt;
  rowStatus: TDbRowStatus & Opt = DbRowStatus.ENABLED;
  userRolesCollection = new Collection<UserRoles>(this);
}

export const RolesSchema = defineEntity({
  class: Roles,
  properties: {
    key: p.string().primary().length(64),
    name: p.string().length(256),
    createdAt: p.datetime().defaultRaw(\`CURRENT_TIMESTAMP\`),
    updatedAt: p.datetime().defaultRaw(\`CURRENT_TIMESTAMP\`),
    rowStatus: p.enum(() => DbRowStatus).nativeEnumName('db_row_status'),
    userRolesCollection: () => p.oneToMany(UserRoles).mappedBy('role'),
  },
});
",
  "import { type Opt, PrimaryKeyProp, type Ref, defineEntity, p } from '@mikro-orm/core';
import { Domains } from './Domains';
import { Roles } from './Roles';
import { TDbRowStatus, TDbRowStatus } from './TDbRowStatus';
import { Users } from './Users';

export class UserRoles {
  [PrimaryKeyProp]?: ['domain', 'user'];
  domain!: Ref<Domains>;
  domainKey!: string;
  user!: Ref<Users>;
  userId!: string;
  role!: Ref<Roles>;
  roleKey!: string;
  createdAt!: Date & Opt;
  updatedAt!: Date & Opt;
  rowStatus: TDbRowStatus & Opt = DbRowStatus.ENABLED;
}

export const UserRolesSchema = defineEntity({
  class: UserRoles,
  properties: {
    domain: () => p.manyToOne(Domains).primary().ref().updateRule('no action'),
    domainKey: p.string().length(64).persist(false),
    user: () => p.manyToOne(Users).primary().ref().updateRule('no action'),
    userId: p.uuid().persist(false),
    role: () => p.manyToOne(Roles).ref().updateRule('no action').deleteRule('cascade'),
    roleKey: p.string().length(64).persist(false),
    createdAt: p.datetime().defaultRaw(\`CURRENT_TIMESTAMP\`),
    updatedAt: p.datetime().defaultRaw(\`CURRENT_TIMESTAMP\`),
    rowStatus: p.enum(() => DbRowStatus).nativeEnumName('db_row_status'),
  },
});
",
  "import { Collection, type Opt, defineEntity, p } from '@mikro-orm/core';
import { TDbRowStatus, TDbRowStatus } from './TDbRowStatus';
import { UserRoles } from './UserRoles';

export class Users {
  id!: string;
  email!: string;
  createdAt!: Date & Opt;
  updatedAt!: Date & Opt;
  rowStatus: TDbRowStatus & Opt = DbRowStatus.ENABLED;
  userRolesCollection = new Collection<UserRoles>(this);
}

export const UsersSchema = defineEntity({
  class: Users,
  properties: {
    id: p.uuid().primary(),
    email: p.string().length(256),
    createdAt: p.datetime().defaultRaw(\`CURRENT_TIMESTAMP\`),
    updatedAt: p.datetime().defaultRaw(\`CURRENT_TIMESTAMP\`),
    rowStatus: p.enum(() => DbRowStatus).nativeEnumName('db_row_status'),
    userRolesCollection: () => p.oneToMany(UserRoles).mappedBy('user'),
  },
});
",
  "export const DbRowStatus = {
  ENABLED: 'enabled',
  DISABLED: 'disabled',
  ARCHIVED: 'archived',
  DELETED: 'deleted',
} as const;

export type TDbRowStatus = (typeof DbRowStatus)[keyof typeof DbRowStatus];
",
]
`;

exports[`shared native enums [dictionary] > [entitySchema] > shared native enum 1`] = `
[
  "import { Collection, EntitySchema, type Opt, PrimaryKeyProp } from '@mikro-orm/core';
import { TDbRowStatus, TDbRowStatus } from './TDbRowStatus';
import { UserRoles } from './UserRoles';

export class Domains {
  [PrimaryKeyProp]?: 'key';
  key!: string;
  name!: string;
  createdAt!: Date & Opt;
  updatedAt!: Date & Opt;
  rowStatus: TDbRowStatus & Opt = DbRowStatus.ENABLED;
  userRolesCollection = new Collection<UserRoles>(this);
}

export const DomainsSchema = new EntitySchema({
  class: Domains,
  properties: {
    key: { primary: true, type: 'string', length: 64 },
    name: { type: 'string', length: 256 },
    createdAt: { type: 'datetime', defaultRaw: \`CURRENT_TIMESTAMP\` },
    updatedAt: { type: 'datetime', defaultRaw: \`CURRENT_TIMESTAMP\` },
    rowStatus: {
      enum: true,
      items: () => DbRowStatus,
      nativeEnumName: 'db_row_status',
    },
    userRolesCollection: {
      kind: '1:m',
      entity: () => UserRoles,
      mappedBy: 'domain',
    },
  },
});
",
  "import { Collection, EntitySchema, type Opt, PrimaryKeyProp } from '@mikro-orm/core';
import { TDbRowStatus, TDbRowStatus } from './TDbRowStatus';
import { UserRoles } from './UserRoles';

export class Roles {
  [PrimaryKeyProp]?: 'key';
  key!: string;
  name!: string;
  createdAt!: Date & Opt;
  updatedAt!: Date & Opt;
  rowStatus: TDbRowStatus & Opt = DbRowStatus.ENABLED;
  userRolesCollection = new Collection<UserRoles>(this);
}

export const RolesSchema = new EntitySchema({
  class: Roles,
  properties: {
    key: { primary: true, type: 'string', length: 64 },
    name: { type: 'string', length: 256 },
    createdAt: { type: 'datetime', defaultRaw: \`CURRENT_TIMESTAMP\` },
    updatedAt: { type: 'datetime', defaultRaw: \`CURRENT_TIMESTAMP\` },
    rowStatus: {
      enum: true,
      items: () => DbRowStatus,
      nativeEnumName: 'db_row_status',
    },
    userRolesCollection: {
      kind: '1:m',
      entity: () => UserRoles,
      mappedBy: 'role',
    },
  },
});
",
  "import { EntitySchema, type Opt, PrimaryKeyProp, type Ref } from '@mikro-orm/core';
import { Domains } from './Domains';
import { Roles } from './Roles';
import { TDbRowStatus, TDbRowStatus } from './TDbRowStatus';
import { Users } from './Users';

export class UserRoles {
  [PrimaryKeyProp]?: ['domain', 'user'];
  domain!: Ref<Domains>;
  domainKey!: string;
  user!: Ref<Users>;
  userId!: string;
  role!: Ref<Roles>;
  roleKey!: string;
  createdAt!: Date & Opt;
  updatedAt!: Date & Opt;
  rowStatus: TDbRowStatus & Opt = DbRowStatus.ENABLED;
}

export const UserRolesSchema = new EntitySchema({
  class: UserRoles,
  properties: {
    domain: {
      primary: true,
      kind: 'm:1',
      entity: () => Domains,
      ref: true,
      updateRule: 'no action',
    },
    domainKey: { type: 'string', length: 64, persist: false },
    user: {
      primary: true,
      kind: 'm:1',
      entity: () => Users,
      ref: true,
      updateRule: 'no action',
    },
    userId: { type: 'uuid', persist: false },
    role: {
      kind: 'm:1',
      entity: () => Roles,
      ref: true,
      updateRule: 'no action',
      deleteRule: 'cascade',
    },
    roleKey: { type: 'string', length: 64, persist: false },
    createdAt: { type: 'datetime', defaultRaw: \`CURRENT_TIMESTAMP\` },
    updatedAt: { type: 'datetime', defaultRaw: \`CURRENT_TIMESTAMP\` },
    rowStatus: {
      enum: true,
      items: () => DbRowStatus,
      nativeEnumName: 'db_row_status',
    },
  },
});
",
  "import { Collection, EntitySchema, type Opt } from '@mikro-orm/core';
import { TDbRowStatus, TDbRowStatus } from './TDbRowStatus';
import { UserRoles } from './UserRoles';

export class Users {
  id!: string;
  email!: string;
  createdAt!: Date & Opt;
  updatedAt!: Date & Opt;
  rowStatus: TDbRowStatus & Opt = DbRowStatus.ENABLED;
  userRolesCollection = new Collection<UserRoles>(this);
}

export const UsersSchema = new EntitySchema({
  class: Users,
  properties: {
    id: { primary: true, type: 'uuid' },
    email: { type: 'string', length: 256 },
    createdAt: { type: 'datetime', defaultRaw: \`CURRENT_TIMESTAMP\` },
    updatedAt: { type: 'datetime', defaultRaw: \`CURRENT_TIMESTAMP\` },
    rowStatus: {
      enum: true,
      items: () => DbRowStatus,
      nativeEnumName: 'db_row_status',
    },
    userRolesCollection: {
      kind: '1:m',
      entity: () => UserRoles,
      mappedBy: 'user',
    },
  },
});
",
  "export const DbRowStatus = {
  ENABLED: 'enabled',
  DISABLED: 'disabled',
  ARCHIVED: 'archived',
  DELETED: 'deleted',
} as const;

export type TDbRowStatus = (typeof DbRowStatus)[keyof typeof DbRowStatus];
",
]
`;

exports[`shared native enums [ts-enum] > [decorators] > shared native enum 1`] = `
[
  "import { Collection, type Opt, PrimaryKeyProp } from '@mikro-orm/core';
import { Entity, Enum, OneToMany, PrimaryKey, Property } from '@mikro-orm/decorators/legacy';
import { TDbRowStatus } from './TDbRowStatus';
import { UserRoles } from './UserRoles';

@Entity()
export class Domains {

  [PrimaryKeyProp]?: 'key';

  @PrimaryKey({ length: 64 })
  key!: string;

  @Property({ length: 256 })
  name!: string;

  @Property({ type: 'datetime', defaultRaw: \`CURRENT_TIMESTAMP\` })
  createdAt!: Date & Opt;

  @Property({ type: 'datetime', defaultRaw: \`CURRENT_TIMESTAMP\` })
  updatedAt!: Date & Opt;

  @Enum({ items: () => DbRowStatus, nativeEnumName: 'db_row_status' })
  rowStatus: DbRowStatus & Opt = DbRowStatus.ENABLED;

  @OneToMany({ entity: () => UserRoles, mappedBy: 'domain' })
  userRolesCollection = new Collection<UserRoles>(this);

}
",
  "import { Collection, type Opt, PrimaryKeyProp } from '@mikro-orm/core';
import { Entity, Enum, OneToMany, PrimaryKey, Property } from '@mikro-orm/decorators/legacy';
import { TDbRowStatus } from './TDbRowStatus';
import { UserRoles } from './UserRoles';

@Entity()
export class Roles {

  [PrimaryKeyProp]?: 'key';

  @PrimaryKey({ length: 64 })
  key!: string;

  @Property({ length: 256 })
  name!: string;

  @Property({ type: 'datetime', defaultRaw: \`CURRENT_TIMESTAMP\` })
  createdAt!: Date & Opt;

  @Property({ type: 'datetime', defaultRaw: \`CURRENT_TIMESTAMP\` })
  updatedAt!: Date & Opt;

  @Enum({ items: () => DbRowStatus, nativeEnumName: 'db_row_status' })
  rowStatus: DbRowStatus & Opt = DbRowStatus.ENABLED;

  @OneToMany({ entity: () => UserRoles, mappedBy: 'role' })
  userRolesCollection = new Collection<UserRoles>(this);

}
",
  "import { type Opt, PrimaryKeyProp, type Ref } from '@mikro-orm/core';
import { Entity, Enum, ManyToOne, Property } from '@mikro-orm/decorators/legacy';
import { Domains } from './Domains';
import { Roles } from './Roles';
import { TDbRowStatus } from './TDbRowStatus';
import { Users } from './Users';

@Entity()
export class UserRoles {

  [PrimaryKeyProp]?: ['domain', 'user'];

  @ManyToOne({ entity: () => Domains, ref: true, updateRule: 'no action', primary: true })
  domain!: Ref<Domains>;

  @Property({ length: 64, persist: false })
  domainKey!: string;

  @ManyToOne({ entity: () => Users, ref: true, updateRule: 'no action', primary: true })
  user!: Ref<Users>;

  @Property({ type: 'uuid', persist: false })
  userId!: string;

  @ManyToOne({ entity: () => Roles, ref: true, updateRule: 'no action', deleteRule: 'cascade' })
  role!: Ref<Roles>;

  @Property({ length: 64, persist: false })
  roleKey!: string;

  @Property({ type: 'datetime', defaultRaw: \`CURRENT_TIMESTAMP\` })
  createdAt!: Date & Opt;

  @Property({ type: 'datetime', defaultRaw: \`CURRENT_TIMESTAMP\` })
  updatedAt!: Date & Opt;

  @Enum({ items: () => DbRowStatus, nativeEnumName: 'db_row_status' })
  rowStatus: DbRowStatus & Opt = DbRowStatus.ENABLED;

}
",
  "import { Collection, type Opt } from '@mikro-orm/core';
import { Entity, Enum, OneToMany, PrimaryKey, Property } from '@mikro-orm/decorators/legacy';
import { TDbRowStatus } from './TDbRowStatus';
import { UserRoles } from './UserRoles';

@Entity()
export class Users {

  @PrimaryKey({ type: 'uuid' })
  id!: string;

  @Property({ length: 256 })
  email!: string;

  @Property({ type: 'datetime', defaultRaw: \`CURRENT_TIMESTAMP\` })
  createdAt!: Date & Opt;

  @Property({ type: 'datetime', defaultRaw: \`CURRENT_TIMESTAMP\` })
  updatedAt!: Date & Opt;

  @Enum({ items: () => DbRowStatus, nativeEnumName: 'db_row_status' })
  rowStatus: DbRowStatus & Opt = DbRowStatus.ENABLED;

  @OneToMany({ entity: () => UserRoles, mappedBy: 'user' })
  userRolesCollection = new Collection<UserRoles>(this);

}
",
  "export enum DbRowStatus {
  ENABLED = 'enabled',
  DISABLED = 'disabled',
  ARCHIVED = 'archived',
  DELETED = 'deleted',
}
",
]
`;

exports[`shared native enums [ts-enum] > [defineEntity+types] > shared native enum 1`] = `
[
  "import { InferEntity, defineEntity, p } from '@mikro-orm/core';
import { TDbRowStatus } from './TDbRowStatus';
import { UserRoles } from './UserRoles';

export const Domains = defineEntity({
  name: 'Domains',
  properties: {
    key: p.string().primary().length(64),
    name: p.string().length(256),
    createdAt: p.datetime().defaultRaw(\`CURRENT_TIMESTAMP\`),
    updatedAt: p.datetime().defaultRaw(\`CURRENT_TIMESTAMP\`),
    rowStatus: p.enum(() => DbRowStatus).nativeEnumName('db_row_status'),
    userRolesCollection: () => p.oneToMany(UserRoles).mappedBy('domain'),
  },
});

export interface IDomains extends InferEntity<typeof Domains> {}
",
  "import { InferEntity, defineEntity, p } from '@mikro-orm/core';
import { TDbRowStatus } from './TDbRowStatus';
import { UserRoles } from './UserRoles';

export const Roles = defineEntity({
  name: 'Roles',
  properties: {
    key: p.string().primary().length(64),
    name: p.string().length(256),
    createdAt: p.datetime().defaultRaw(\`CURRENT_TIMESTAMP\`),
    updatedAt: p.datetime().defaultRaw(\`CURRENT_TIMESTAMP\`),
    rowStatus: p.enum(() => DbRowStatus).nativeEnumName('db_row_status'),
    userRolesCollection: () => p.oneToMany(UserRoles).mappedBy('role'),
  },
});

export interface IRoles extends InferEntity<typeof Roles> {}
",
  "import { InferEntity, defineEntity, p } from '@mikro-orm/core';
import { Domains } from './Domains';
import { Roles } from './Roles';
import { TDbRowStatus } from './TDbRowStatus';
import { Users } from './Users';

export const UserRoles = defineEntity({
  name: 'UserRoles',
  primaryKeys: ['domain', 'user'],
  properties: {
    domain: () => p.manyToOne(Domains).primary().ref().updateRule('no action'),
    domainKey: p.string().length(64).persist(false),
    user: () => p.manyToOne(Users).primary().ref().updateRule('no action'),
    userId: p.uuid().persist(false),
    role: () => p.manyToOne(Roles).ref().updateRule('no action').deleteRule('cascade'),
    roleKey: p.string().length(64).persist(false),
    createdAt: p.datetime().defaultRaw(\`CURRENT_TIMESTAMP\`),
    updatedAt: p.datetime().defaultRaw(\`CURRENT_TIMESTAMP\`),
    rowStatus: p.enum(() => DbRowStatus).nativeEnumName('db_row_status'),
  },
});

export interface IUserRoles extends InferEntity<typeof UserRoles> {}
",
  "import { InferEntity, defineEntity, p } from '@mikro-orm/core';
import { TDbRowStatus } from './TDbRowStatus';
import { UserRoles } from './UserRoles';

export const Users = defineEntity({
  name: 'Users',
  properties: {
    id: p.uuid().primary(),
    email: p.string().length(256),
    createdAt: p.datetime().defaultRaw(\`CURRENT_TIMESTAMP\`),
    updatedAt: p.datetime().defaultRaw(\`CURRENT_TIMESTAMP\`),
    rowStatus: p.enum(() => DbRowStatus).nativeEnumName('db_row_status'),
    userRolesCollection: () => p.oneToMany(UserRoles).mappedBy('user'),
  },
});

export interface IUsers extends InferEntity<typeof Users> {}
",
  "export enum DbRowStatus {
  ENABLED = 'enabled',
  DISABLED = 'disabled',
  ARCHIVED = 'archived',
  DELETED = 'deleted',
}
",
]
`;

exports[`shared native enums [ts-enum] > [defineEntity] > shared native enum 1`] = `
[
  "import { Collection, type Opt, PrimaryKeyProp, defineEntity, p } from '@mikro-orm/core';
import { TDbRowStatus } from './TDbRowStatus';
import { UserRoles } from './UserRoles';

export class Domains {
  [PrimaryKeyProp]?: 'key';
  key!: string;
  name!: string;
  createdAt!: Date & Opt;
  updatedAt!: Date & Opt;
  rowStatus: DbRowStatus & Opt = DbRowStatus.ENABLED;
  userRolesCollection = new Collection<UserRoles>(this);
}

export const DomainsSchema = defineEntity({
  class: Domains,
  properties: {
    key: p.string().primary().length(64),
    name: p.string().length(256),
    createdAt: p.datetime().defaultRaw(\`CURRENT_TIMESTAMP\`),
    updatedAt: p.datetime().defaultRaw(\`CURRENT_TIMESTAMP\`),
    rowStatus: p.enum(() => DbRowStatus).nativeEnumName('db_row_status'),
    userRolesCollection: () => p.oneToMany(UserRoles).mappedBy('domain'),
  },
});
",
  "import { Collection, type Opt, PrimaryKeyProp, defineEntity, p } from '@mikro-orm/core';
import { TDbRowStatus } from './TDbRowStatus';
import { UserRoles } from './UserRoles';

export class Roles {
  [PrimaryKeyProp]?: 'key';
  key!: string;
  name!: string;
  createdAt!: Date & Opt;
  updatedAt!: Date & Opt;
  rowStatus: DbRowStatus & Opt = DbRowStatus.ENABLED;
  userRolesCollection = new Collection<UserRoles>(this);
}

export const RolesSchema = defineEntity({
  class: Roles,
  properties: {
    key: p.string().primary().length(64),
    name: p.string().length(256),
    createdAt: p.datetime().defaultRaw(\`CURRENT_TIMESTAMP\`),
    updatedAt: p.datetime().defaultRaw(\`CURRENT_TIMESTAMP\`),
    rowStatus: p.enum(() => DbRowStatus).nativeEnumName('db_row_status'),
    userRolesCollection: () => p.oneToMany(UserRoles).mappedBy('role'),
  },
});
",
  "import { type Opt, PrimaryKeyProp, type Ref, defineEntity, p } from '@mikro-orm/core';
import { Domains } from './Domains';
import { Roles } from './Roles';
import { TDbRowStatus } from './TDbRowStatus';
import { Users } from './Users';

export class UserRoles {
  [PrimaryKeyProp]?: ['domain', 'user'];
  domain!: Ref<Domains>;
  domainKey!: string;
  user!: Ref<Users>;
  userId!: string;
  role!: Ref<Roles>;
  roleKey!: string;
  createdAt!: Date & Opt;
  updatedAt!: Date & Opt;
  rowStatus: DbRowStatus & Opt = DbRowStatus.ENABLED;
}

export const UserRolesSchema = defineEntity({
  class: UserRoles,
  properties: {
    domain: () => p.manyToOne(Domains).primary().ref().updateRule('no action'),
    domainKey: p.string().length(64).persist(false),
    user: () => p.manyToOne(Users).primary().ref().updateRule('no action'),
    userId: p.uuid().persist(false),
    role: () => p.manyToOne(Roles).ref().updateRule('no action').deleteRule('cascade'),
    roleKey: p.string().length(64).persist(false),
    createdAt: p.datetime().defaultRaw(\`CURRENT_TIMESTAMP\`),
    updatedAt: p.datetime().defaultRaw(\`CURRENT_TIMESTAMP\`),
    rowStatus: p.enum(() => DbRowStatus).nativeEnumName('db_row_status'),
  },
});
",
  "import { Collection, type Opt, defineEntity, p } from '@mikro-orm/core';
import { TDbRowStatus } from './TDbRowStatus';
import { UserRoles } from './UserRoles';

export class Users {
  id!: string;
  email!: string;
  createdAt!: Date & Opt;
  updatedAt!: Date & Opt;
  rowStatus: DbRowStatus & Opt = DbRowStatus.ENABLED;
  userRolesCollection = new Collection<UserRoles>(this);
}

export const UsersSchema = defineEntity({
  class: Users,
  properties: {
    id: p.uuid().primary(),
    email: p.string().length(256),
    createdAt: p.datetime().defaultRaw(\`CURRENT_TIMESTAMP\`),
    updatedAt: p.datetime().defaultRaw(\`CURRENT_TIMESTAMP\`),
    rowStatus: p.enum(() => DbRowStatus).nativeEnumName('db_row_status'),
    userRolesCollection: () => p.oneToMany(UserRoles).mappedBy('user'),
  },
});
",
  "export enum DbRowStatus {
  ENABLED = 'enabled',
  DISABLED = 'disabled',
  ARCHIVED = 'archived',
  DELETED = 'deleted',
}
",
]
`;

exports[`shared native enums [ts-enum] > [entitySchema] > shared native enum 1`] = `
[
  "import { Collection, EntitySchema, type Opt, PrimaryKeyProp } from '@mikro-orm/core';
import { TDbRowStatus } from './TDbRowStatus';
import { UserRoles } from './UserRoles';

export class Domains {
  [PrimaryKeyProp]?: 'key';
  key!: string;
  name!: string;
  createdAt!: Date & Opt;
  updatedAt!: Date & Opt;
  rowStatus: DbRowStatus & Opt = DbRowStatus.ENABLED;
  userRolesCollection = new Collection<UserRoles>(this);
}

export const DomainsSchema = new EntitySchema({
  class: Domains,
  properties: {
    key: { primary: true, type: 'string', length: 64 },
    name: { type: 'string', length: 256 },
    createdAt: { type: 'datetime', defaultRaw: \`CURRENT_TIMESTAMP\` },
    updatedAt: { type: 'datetime', defaultRaw: \`CURRENT_TIMESTAMP\` },
    rowStatus: {
      enum: true,
      items: () => DbRowStatus,
      nativeEnumName: 'db_row_status',
    },
    userRolesCollection: {
      kind: '1:m',
      entity: () => UserRoles,
      mappedBy: 'domain',
    },
  },
});
",
  "import { Collection, EntitySchema, type Opt, PrimaryKeyProp } from '@mikro-orm/core';
import { TDbRowStatus } from './TDbRowStatus';
import { UserRoles } from './UserRoles';

export class Roles {
  [PrimaryKeyProp]?: 'key';
  key!: string;
  name!: string;
  createdAt!: Date & Opt;
  updatedAt!: Date & Opt;
  rowStatus: DbRowStatus & Opt = DbRowStatus.ENABLED;
  userRolesCollection = new Collection<UserRoles>(this);
}

export const RolesSchema = new EntitySchema({
  class: Roles,
  properties: {
    key: { primary: true, type: 'string', length: 64 },
    name: { type: 'string', length: 256 },
    createdAt: { type: 'datetime', defaultRaw: \`CURRENT_TIMESTAMP\` },
    updatedAt: { type: 'datetime', defaultRaw: \`CURRENT_TIMESTAMP\` },
    rowStatus: {
      enum: true,
      items: () => DbRowStatus,
      nativeEnumName: 'db_row_status',
    },
    userRolesCollection: {
      kind: '1:m',
      entity: () => UserRoles,
      mappedBy: 'role',
    },
  },
});
",
  "import { EntitySchema, type Opt, PrimaryKeyProp, type Ref } from '@mikro-orm/core';
import { Domains } from './Domains';
import { Roles } from './Roles';
import { TDbRowStatus } from './TDbRowStatus';
import { Users } from './Users';

export class UserRoles {
  [PrimaryKeyProp]?: ['domain', 'user'];
  domain!: Ref<Domains>;
  domainKey!: string;
  user!: Ref<Users>;
  userId!: string;
  role!: Ref<Roles>;
  roleKey!: string;
  createdAt!: Date & Opt;
  updatedAt!: Date & Opt;
  rowStatus: DbRowStatus & Opt = DbRowStatus.ENABLED;
}

export const UserRolesSchema = new EntitySchema({
  class: UserRoles,
  properties: {
    domain: {
      primary: true,
      kind: 'm:1',
      entity: () => Domains,
      ref: true,
      updateRule: 'no action',
    },
    domainKey: { type: 'string', length: 64, persist: false },
    user: {
      primary: true,
      kind: 'm:1',
      entity: () => Users,
      ref: true,
      updateRule: 'no action',
    },
    userId: { type: 'uuid', persist: false },
    role: {
      kind: 'm:1',
      entity: () => Roles,
      ref: true,
      updateRule: 'no action',
      deleteRule: 'cascade',
    },
    roleKey: { type: 'string', length: 64, persist: false },
    createdAt: { type: 'datetime', defaultRaw: \`CURRENT_TIMESTAMP\` },
    updatedAt: { type: 'datetime', defaultRaw: \`CURRENT_TIMESTAMP\` },
    rowStatus: {
      enum: true,
      items: () => DbRowStatus,
      nativeEnumName: 'db_row_status',
    },
  },
});
",
  "import { Collection, EntitySchema, type Opt } from '@mikro-orm/core';
import { TDbRowStatus } from './TDbRowStatus';
import { UserRoles } from './UserRoles';

export class Users {
  id!: string;
  email!: string;
  createdAt!: Date & Opt;
  updatedAt!: Date & Opt;
  rowStatus: DbRowStatus & Opt = DbRowStatus.ENABLED;
  userRolesCollection = new Collection<UserRoles>(this);
}

export const UsersSchema = new EntitySchema({
  class: Users,
  properties: {
    id: { primary: true, type: 'uuid' },
    email: { type: 'string', length: 256 },
    createdAt: { type: 'datetime', defaultRaw: \`CURRENT_TIMESTAMP\` },
    updatedAt: { type: 'datetime', defaultRaw: \`CURRENT_TIMESTAMP\` },
    rowStatus: {
      enum: true,
      items: () => DbRowStatus,
      nativeEnumName: 'db_row_status',
    },
    userRolesCollection: {
      kind: '1:m',
      entity: () => UserRoles,
      mappedBy: 'user',
    },
  },
});
",
  "export enum DbRowStatus {
  ENABLED = 'enabled',
  DISABLED = 'disabled',
  ARCHIVED = 'archived',
  DELETED = 'deleted',
}
",
]
`;

exports[`shared native enums [union-type] > [decorators] > shared native enum 1`] = `
[
  "import { Collection, type Opt, PrimaryKeyProp } from '@mikro-orm/core';
import { Entity, Enum, OneToMany, PrimaryKey, Property } from '@mikro-orm/decorators/legacy';
import { TDbRowStatus } from './TDbRowStatus';
import { UserRoles } from './UserRoles';

@Entity()
export class Domains {

  [PrimaryKeyProp]?: 'key';

  @PrimaryKey({ length: 64 })
  key!: string;

  @Property({ length: 256 })
  name!: string;

  @Property({ type: 'datetime', defaultRaw: \`CURRENT_TIMESTAMP\` })
  createdAt!: Date & Opt;

  @Property({ type: 'datetime', defaultRaw: \`CURRENT_TIMESTAMP\` })
  updatedAt!: Date & Opt;

  @Enum({ items: ['enabled', 'disabled', 'archived', 'deleted'] })
  rowStatus: TDbRowStatus & Opt = 'enabled';

  @OneToMany({ entity: () => UserRoles, mappedBy: 'domain' })
  userRolesCollection = new Collection<UserRoles>(this);

}
",
  "import { Collection, type Opt, PrimaryKeyProp } from '@mikro-orm/core';
import { Entity, Enum, OneToMany, PrimaryKey, Property } from '@mikro-orm/decorators/legacy';
import { TDbRowStatus } from './TDbRowStatus';
import { UserRoles } from './UserRoles';

@Entity()
export class Roles {

  [PrimaryKeyProp]?: 'key';

  @PrimaryKey({ length: 64 })
  key!: string;

  @Property({ length: 256 })
  name!: string;

  @Property({ type: 'datetime', defaultRaw: \`CURRENT_TIMESTAMP\` })
  createdAt!: Date & Opt;

  @Property({ type: 'datetime', defaultRaw: \`CURRENT_TIMESTAMP\` })
  updatedAt!: Date & Opt;

  @Enum({ items: ['enabled', 'disabled', 'archived', 'deleted'] })
  rowStatus: TDbRowStatus & Opt = 'enabled';

  @OneToMany({ entity: () => UserRoles, mappedBy: 'role' })
  userRolesCollection = new Collection<UserRoles>(this);

}
",
  "import { type Opt, PrimaryKeyProp, type Ref } from '@mikro-orm/core';
import { Entity, Enum, ManyToOne, Property } from '@mikro-orm/decorators/legacy';
import { Domains } from './Domains';
import { Roles } from './Roles';
import { TDbRowStatus } from './TDbRowStatus';
import { Users } from './Users';

@Entity()
export class UserRoles {

  [PrimaryKeyProp]?: ['domain', 'user'];

  @ManyToOne({ entity: () => Domains, ref: true, updateRule: 'no action', primary: true })
  domain!: Ref<Domains>;

  @Property({ length: 64, persist: false })
  domainKey!: string;

  @ManyToOne({ entity: () => Users, ref: true, updateRule: 'no action', primary: true })
  user!: Ref<Users>;

  @Property({ type: 'uuid', persist: false })
  userId!: string;

  @ManyToOne({ entity: () => Roles, ref: true, updateRule: 'no action', deleteRule: 'cascade' })
  role!: Ref<Roles>;

  @Property({ length: 64, persist: false })
  roleKey!: string;

  @Property({ type: 'datetime', defaultRaw: \`CURRENT_TIMESTAMP\` })
  createdAt!: Date & Opt;

  @Property({ type: 'datetime', defaultRaw: \`CURRENT_TIMESTAMP\` })
  updatedAt!: Date & Opt;

  @Enum({ items: ['enabled', 'disabled', 'archived', 'deleted'] })
  rowStatus: TDbRowStatus & Opt = 'enabled';

}
",
  "import { Collection, type Opt } from '@mikro-orm/core';
import { Entity, Enum, OneToMany, PrimaryKey, Property } from '@mikro-orm/decorators/legacy';
import { TDbRowStatus } from './TDbRowStatus';
import { UserRoles } from './UserRoles';

@Entity()
export class Users {

  @PrimaryKey({ type: 'uuid' })
  id!: string;

  @Property({ length: 256 })
  email!: string;

  @Property({ type: 'datetime', defaultRaw: \`CURRENT_TIMESTAMP\` })
  createdAt!: Date & Opt;

  @Property({ type: 'datetime', defaultRaw: \`CURRENT_TIMESTAMP\` })
  updatedAt!: Date & Opt;

  @Enum({ items: ['enabled', 'disabled', 'archived', 'deleted'] })
  rowStatus: TDbRowStatus & Opt = 'enabled';

  @OneToMany({ entity: () => UserRoles, mappedBy: 'user' })
  userRolesCollection = new Collection<UserRoles>(this);

}
",
  "export type TDbRowStatus = 'enabled' | 'disabled' | 'archived' | 'deleted';
",
]
`;

exports[`shared native enums [union-type] > [defineEntity+types] > shared native enum 1`] = `
[
  "import { InferEntity, defineEntity, p } from '@mikro-orm/core';
import {  } from './TDbRowStatus';
import { UserRoles } from './UserRoles';

export const Domains = defineEntity({
  name: 'Domains',
  properties: {
    key: p.string().primary().length(64),
    name: p.string().length(256),
    createdAt: p.datetime().defaultRaw(\`CURRENT_TIMESTAMP\`),
    updatedAt: p.datetime().defaultRaw(\`CURRENT_TIMESTAMP\`),
    rowStatus: p.enum(['enabled', 'disabled', 'archived', 'deleted']),
    userRolesCollection: () => p.oneToMany(UserRoles).mappedBy('domain'),
  },
});

export interface IDomains extends InferEntity<typeof Domains> {}
",
  "import { InferEntity, defineEntity, p } from '@mikro-orm/core';
import {  } from './TDbRowStatus';
import { UserRoles } from './UserRoles';

export const Roles = defineEntity({
  name: 'Roles',
  properties: {
    key: p.string().primary().length(64),
    name: p.string().length(256),
    createdAt: p.datetime().defaultRaw(\`CURRENT_TIMESTAMP\`),
    updatedAt: p.datetime().defaultRaw(\`CURRENT_TIMESTAMP\`),
    rowStatus: p.enum(['enabled', 'disabled', 'archived', 'deleted']),
    userRolesCollection: () => p.oneToMany(UserRoles).mappedBy('role'),
  },
});

export interface IRoles extends InferEntity<typeof Roles> {}
",
  "import { InferEntity, defineEntity, p } from '@mikro-orm/core';
import { Domains } from './Domains';
import { Roles } from './Roles';
import {  } from './TDbRowStatus';
import { Users } from './Users';

export const UserRoles = defineEntity({
  name: 'UserRoles',
  primaryKeys: ['domain', 'user'],
  properties: {
    domain: () => p.manyToOne(Domains).primary().ref().updateRule('no action'),
    domainKey: p.string().length(64).persist(false),
    user: () => p.manyToOne(Users).primary().ref().updateRule('no action'),
    userId: p.uuid().persist(false),
    role: () => p.manyToOne(Roles).ref().updateRule('no action').deleteRule('cascade'),
    roleKey: p.string().length(64).persist(false),
    createdAt: p.datetime().defaultRaw(\`CURRENT_TIMESTAMP\`),
    updatedAt: p.datetime().defaultRaw(\`CURRENT_TIMESTAMP\`),
    rowStatus: p.enum(['enabled', 'disabled', 'archived', 'deleted']),
  },
});

export interface IUserRoles extends InferEntity<typeof UserRoles> {}
",
  "import { InferEntity, defineEntity, p } from '@mikro-orm/core';
import {  } from './TDbRowStatus';
import { UserRoles } from './UserRoles';

export const Users = defineEntity({
  name: 'Users',
  properties: {
    id: p.uuid().primary(),
    email: p.string().length(256),
    createdAt: p.datetime().defaultRaw(\`CURRENT_TIMESTAMP\`),
    updatedAt: p.datetime().defaultRaw(\`CURRENT_TIMESTAMP\`),
    rowStatus: p.enum(['enabled', 'disabled', 'archived', 'deleted']),
    userRolesCollection: () => p.oneToMany(UserRoles).mappedBy('user'),
  },
});

export interface IUsers extends InferEntity<typeof Users> {}
",
  "export type TDbRowStatus = 'enabled' | 'disabled' | 'archived' | 'deleted';
",
]
`;

exports[`shared native enums [union-type] > [defineEntity] > shared native enum 1`] = `
[
  "import { Collection, type Opt, PrimaryKeyProp, defineEntity, p } from '@mikro-orm/core';
import { TDbRowStatus } from './TDbRowStatus';
import { UserRoles } from './UserRoles';

export class Domains {
  [PrimaryKeyProp]?: 'key';
  key!: string;
  name!: string;
  createdAt!: Date & Opt;
  updatedAt!: Date & Opt;
  rowStatus: TDbRowStatus & Opt = 'enabled';
  userRolesCollection = new Collection<UserRoles>(this);
}

export const DomainsSchema = defineEntity({
  class: Domains,
  properties: {
    key: p.string().primary().length(64),
    name: p.string().length(256),
    createdAt: p.datetime().defaultRaw(\`CURRENT_TIMESTAMP\`),
    updatedAt: p.datetime().defaultRaw(\`CURRENT_TIMESTAMP\`),
    rowStatus: p.enum(['enabled', 'disabled', 'archived', 'deleted']),
    userRolesCollection: () => p.oneToMany(UserRoles).mappedBy('domain'),
  },
});
",
  "import { Collection, type Opt, PrimaryKeyProp, defineEntity, p } from '@mikro-orm/core';
import { TDbRowStatus } from './TDbRowStatus';
import { UserRoles } from './UserRoles';

export class Roles {
  [PrimaryKeyProp]?: 'key';
  key!: string;
  name!: string;
  createdAt!: Date & Opt;
  updatedAt!: Date & Opt;
  rowStatus: TDbRowStatus & Opt = 'enabled';
  userRolesCollection = new Collection<UserRoles>(this);
}

export const RolesSchema = defineEntity({
  class: Roles,
  properties: {
    key: p.string().primary().length(64),
    name: p.string().length(256),
    createdAt: p.datetime().defaultRaw(\`CURRENT_TIMESTAMP\`),
    updatedAt: p.datetime().defaultRaw(\`CURRENT_TIMESTAMP\`),
    rowStatus: p.enum(['enabled', 'disabled', 'archived', 'deleted']),
    userRolesCollection: () => p.oneToMany(UserRoles).mappedBy('role'),
  },
});
",
  "import { type Opt, PrimaryKeyProp, type Ref, defineEntity, p } from '@mikro-orm/core';
import { Domains } from './Domains';
import { Roles } from './Roles';
import { TDbRowStatus } from './TDbRowStatus';
import { Users } from './Users';

export class UserRoles {
  [PrimaryKeyProp]?: ['domain', 'user'];
  domain!: Ref<Domains>;
  domainKey!: string;
  user!: Ref<Users>;
  userId!: string;
  role!: Ref<Roles>;
  roleKey!: string;
  createdAt!: Date & Opt;
  updatedAt!: Date & Opt;
  rowStatus: TDbRowStatus & Opt = 'enabled';
}

export const UserRolesSchema = defineEntity({
  class: UserRoles,
  properties: {
    domain: () => p.manyToOne(Domains).primary().ref().updateRule('no action'),
    domainKey: p.string().length(64).persist(false),
    user: () => p.manyToOne(Users).primary().ref().updateRule('no action'),
    userId: p.uuid().persist(false),
    role: () => p.manyToOne(Roles).ref().updateRule('no action').deleteRule('cascade'),
    roleKey: p.string().length(64).persist(false),
    createdAt: p.datetime().defaultRaw(\`CURRENT_TIMESTAMP\`),
    updatedAt: p.datetime().defaultRaw(\`CURRENT_TIMESTAMP\`),
    rowStatus: p.enum(['enabled', 'disabled', 'archived', 'deleted']),
  },
});
",
  "import { Collection, type Opt, defineEntity, p } from '@mikro-orm/core';
import { TDbRowStatus } from './TDbRowStatus';
import { UserRoles } from './UserRoles';

export class Users {
  id!: string;
  email!: string;
  createdAt!: Date & Opt;
  updatedAt!: Date & Opt;
  rowStatus: TDbRowStatus & Opt = 'enabled';
  userRolesCollection = new Collection<UserRoles>(this);
}

export const UsersSchema = defineEntity({
  class: Users,
  properties: {
    id: p.uuid().primary(),
    email: p.string().length(256),
    createdAt: p.datetime().defaultRaw(\`CURRENT_TIMESTAMP\`),
    updatedAt: p.datetime().defaultRaw(\`CURRENT_TIMESTAMP\`),
    rowStatus: p.enum(['enabled', 'disabled', 'archived', 'deleted']),
    userRolesCollection: () => p.oneToMany(UserRoles).mappedBy('user'),
  },
});
",
  "export type TDbRowStatus = 'enabled' | 'disabled' | 'archived' | 'deleted';
",
]
`;

exports[`shared native enums [union-type] > [entitySchema] > shared native enum 1`] = `
[
  "import { Collection, EntitySchema, type Opt, PrimaryKeyProp } from '@mikro-orm/core';
import { TDbRowStatus } from './TDbRowStatus';
import { UserRoles } from './UserRoles';

export class Domains {
  [PrimaryKeyProp]?: 'key';
  key!: string;
  name!: string;
  createdAt!: Date & Opt;
  updatedAt!: Date & Opt;
  rowStatus: TDbRowStatus & Opt = 'enabled';
  userRolesCollection = new Collection<UserRoles>(this);
}

export const DomainsSchema = new EntitySchema({
  class: Domains,
  properties: {
    key: { primary: true, type: 'string', length: 64 },
    name: { type: 'string', length: 256 },
    createdAt: { type: 'datetime', defaultRaw: \`CURRENT_TIMESTAMP\` },
    updatedAt: { type: 'datetime', defaultRaw: \`CURRENT_TIMESTAMP\` },
    rowStatus: {
      enum: true,
      items: ['enabled', 'disabled', 'archived', 'deleted'],
    },
    userRolesCollection: {
      kind: '1:m',
      entity: () => UserRoles,
      mappedBy: 'domain',
    },
  },
});
",
  "import { Collection, EntitySchema, type Opt, PrimaryKeyProp } from '@mikro-orm/core';
import { TDbRowStatus } from './TDbRowStatus';
import { UserRoles } from './UserRoles';

export class Roles {
  [PrimaryKeyProp]?: 'key';
  key!: string;
  name!: string;
  createdAt!: Date & Opt;
  updatedAt!: Date & Opt;
  rowStatus: TDbRowStatus & Opt = 'enabled';
  userRolesCollection = new Collection<UserRoles>(this);
}

export const RolesSchema = new EntitySchema({
  class: Roles,
  properties: {
    key: { primary: true, type: 'string', length: 64 },
    name: { type: 'string', length: 256 },
    createdAt: { type: 'datetime', defaultRaw: \`CURRENT_TIMESTAMP\` },
    updatedAt: { type: 'datetime', defaultRaw: \`CURRENT_TIMESTAMP\` },
    rowStatus: {
      enum: true,
      items: ['enabled', 'disabled', 'archived', 'deleted'],
    },
    userRolesCollection: {
      kind: '1:m',
      entity: () => UserRoles,
      mappedBy: 'role',
    },
  },
});
",
  "import { EntitySchema, type Opt, PrimaryKeyProp, type Ref } from '@mikro-orm/core';
import { Domains } from './Domains';
import { Roles } from './Roles';
import { TDbRowStatus } from './TDbRowStatus';
import { Users } from './Users';

export class UserRoles {
  [PrimaryKeyProp]?: ['domain', 'user'];
  domain!: Ref<Domains>;
  domainKey!: string;
  user!: Ref<Users>;
  userId!: string;
  role!: Ref<Roles>;
  roleKey!: string;
  createdAt!: Date & Opt;
  updatedAt!: Date & Opt;
  rowStatus: TDbRowStatus & Opt = 'enabled';
}

export const UserRolesSchema = new EntitySchema({
  class: UserRoles,
  properties: {
    domain: {
      primary: true,
      kind: 'm:1',
      entity: () => Domains,
      ref: true,
      updateRule: 'no action',
    },
    domainKey: { type: 'string', length: 64, persist: false },
    user: {
      primary: true,
      kind: 'm:1',
      entity: () => Users,
      ref: true,
      updateRule: 'no action',
    },
    userId: { type: 'uuid', persist: false },
    role: {
      kind: 'm:1',
      entity: () => Roles,
      ref: true,
      updateRule: 'no action',
      deleteRule: 'cascade',
    },
    roleKey: { type: 'string', length: 64, persist: false },
    createdAt: { type: 'datetime', defaultRaw: \`CURRENT_TIMESTAMP\` },
    updatedAt: { type: 'datetime', defaultRaw: \`CURRENT_TIMESTAMP\` },
    rowStatus: {
      enum: true,
      items: ['enabled', 'disabled', 'archived', 'deleted'],
    },
  },
});
",
  "import { Collection, EntitySchema, type Opt } from '@mikro-orm/core';
import { TDbRowStatus } from './TDbRowStatus';
import { UserRoles } from './UserRoles';

export class Users {
  id!: string;
  email!: string;
  createdAt!: Date & Opt;
  updatedAt!: Date & Opt;
  rowStatus: TDbRowStatus & Opt = 'enabled';
  userRolesCollection = new Collection<UserRoles>(this);
}

export const UsersSchema = new EntitySchema({
  class: Users,
  properties: {
    id: { primary: true, type: 'uuid' },
    email: { type: 'string', length: 256 },
    createdAt: { type: 'datetime', defaultRaw: \`CURRENT_TIMESTAMP\` },
    updatedAt: { type: 'datetime', defaultRaw: \`CURRENT_TIMESTAMP\` },
    rowStatus: {
      enum: true,
      items: ['enabled', 'disabled', 'archived', 'deleted'],
    },
    userRolesCollection: {
      kind: '1:m',
      entity: () => UserRoles,
      mappedBy: 'user',
    },
  },
});
",
  "export type TDbRowStatus = 'enabled' | 'disabled' | 'archived' | 'deleted';
",
]
`;
